--- a/README.rdoc
+++ b/README.rdoc
@@ -6,5 +6,6 @@ Launch a new workspace   (currently only supports one; will break this out by wo
 $ rake radar:build_workspace
 
 Monitor progress
-[foo](http://<host>:3000/queues)
+
+http: //<host>:3000/queues
 
